refactor(domain): 검증 추가, 관련 로직 응집