@@ -1,7 +1,7 @@
 package racingcar.domain;
 
 import camp.nextstep.edu.missionutils.Randoms;
-import java.util.Collections;
+import java.util.Arrays;
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -9,7 +9,16 @@ public class CarCollection {
     private final List<Car> cars;
 
     public CarCollection(List<Car> cars) {
-        this.cars = Collections.unmodifiableList(cars);
+        this.cars = List.copyOf(cars);
+    }
+
+    public static CarCollection from(String input) {
+        List<Car> carList = Arrays.stream(input.split(","))
+                .map(String::trim)
+                .map(CarName::new)
+                .map(Car::new)
+                .collect(Collectors.toList());
+        return new CarCollection(carList);
     }
 
     public void moveAll() {
